# AntiDoomscrollApp

./: CMakeLists.txt  README.md  xmake.lua
src/: app.hpp  centeredLabel.cpp  main.cpp
